--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
         // Declare the dependency for the Realtime Database library
         // When using the BoM, you don't specify versions in Firebase library dependencies
         implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.android.material:material:1.2.1'
 
     api 'com.google.maps.android:android-maps-utils:0.6.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
