--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
         // When using the BoM, you don't specify versions in Firebase library dependencies
         implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.libraries.places:places:2.4.0'
 
     api 'com.google.maps.android:android-maps-utils:0.6.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
