--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-auth:20.0.4'
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
+    implementation 'com.firebaseui:firebase-ui-firestore:6.2.0'
 
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation "androidx.dynamicanimation:dynamicanimation:1.0.0"
