add search bar in the list view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TimeKiller">
+        android:theme="@style/Theme.TimeKiller"
+
+        >
         <activity android:name=".InfoActivity"></activity>
         <!-- <activity android:name=".Login" /> -->
         <activity android:name=".MainActivity" />
