--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,9 @@
         >
         <activity android:name=".InfoActivity"></activity>
         <!-- <activity android:name=".Login" /> -->
-        <activity android:name=".MainActivity" />
+<!--        <activity android:name=".MainActivity" />-->
         <activity android:name=".MainActivity2" />
+<!--            android:launchMode = "singleInstance"/>-->
         <activity android:name=".CreatePost" />
         <activity
             android:name=".Background"
@@ -41,11 +42,10 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".ScoreBoard" />
+<!--        <activity android:name=".ScoreBoard" />-->
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
